feat(stage4): implement leased index reconciliation worker