@@ -1,9 +1,11 @@
 package com.spt.learningmanage.model.dto.knowledge;
 
 import java.util.Map;
+import java.util.LinkedHashMap;
+import java.util.Collections;
 
 public record VectorPointMetadata(String id, Map<String, Object> payload) {
     public VectorPointMetadata {
-        payload = Map.copyOf(payload);
+        payload = Collections.unmodifiableMap(new LinkedHashMap<>(payload));
     }
 }
